--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
-numpy==2.1.3
+click==8.1.7
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
+dlib==19.24.6
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+fonttools==4.55.2
+importlib-resources==6.4.5
+kiwisolver==1.4.7
+matplotlib==3.7.5
+numpy==1.24.4
 opencv-python==4.10.0.84
+packaging==24.2
+pillow==10.4.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+six==1.17.0
+zipp==3.20.2
