--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
 click==8.1.7
 colorama==0.4.6
-contourpy==1.1.1
+contourpy==1.3.1
 cycler==0.12.1
 dlib==19.24.6
 face-recognition==1.3.0
-face-recognition-models==0.3.0
-fonttools==4.55.2
-importlib-resources==6.4.5
+face_recognition_models==0.3.0
+fonttools==4.55.3
 kiwisolver==1.4.7
-matplotlib==3.7.5
-numpy==1.24.4
+matplotlib==3.9.3
+numpy==2.2.0
 opencv-python==4.10.0.84
 packaging==24.2
-pillow==10.4.0
-pyparsing==3.1.4
+pillow==11.0.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+setuptools==75.6.0
 six==1.17.0
-zipp==3.20.2
