--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,13 @@
-click==8.1.7
-colorama==0.4.6
-contourpy==1.3.1
-cycler==0.12.1
+click==8.1.8
 dlib==19.24.6
 face-recognition==1.3.0
 face_recognition_models==0.3.0
-fonttools==4.55.3
-kiwisolver==1.4.7
-matplotlib==3.9.3
-numpy==2.2.0
-opencv-python==4.10.0.84
-packaging==24.2
-pillow==11.0.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-setuptools==75.6.0
-six==1.17.0
-tk==0.1.0
+numpy==2.2.3
+opencv-python==4.11.0.86
+pillow==11.1.0
+PySide6==6.8.2.1
+PySide6_Addons==6.8.2.1
+PySide6_Essentials==6.8.2.1
+setuptools==75.8.2
+shiboken6==6.8.2.1
+wheel==0.45.1
